<!--
  ~ pom.xml
  ~ Core
  ~
  ~ Created by leobaehre on 7/4/2023
  ~ Copyright © 2023 Leo Baehre. All rights reserved.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>net.pixelbytemc</groupId>

  <artifactId>Core</artifactId>

  <name>Core</name>

  <version>1.0.0</version>

  <packaging>jar</packaging>

  <properties>

    <author>xsubo5</author>

    <main.class>net.pixelbyte.core.CorePlugin</main.class>

    <java.version>17</java.version>

    <foundation.version>6.4.2</foundation.version>

    <foundation.path>com.github.kangarko</foundation.path>

    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <repositories>
    <repository>
      <id>jitpack.io</id>
      <url>https://jitpack.io</url>
    </repository>
    <repository>
      <id>spigot-repo</id>
      <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
    </repository>
  </repositories>

  <pluginRepositories>
    <pluginRepository>
      <id>maven-snapshots</id>
      <url>https://repository.apache.org/content/repositories/snapshots/</url>
    </pluginRepository>
  </pluginRepositories>

  <dependencies>
    <dependency>
      <groupId>${foundation.path}</groupId>
      <artifactId>Foundation</artifactId>
      <version>${foundation.version}</version>
    </dependency>
    <dependency>
      <groupId>mysql</groupId>
      <artifactId>mysql-connector-java</artifactId>
      <version>8.0.28</version>
    </dependency>
    <dependency>
      <groupId>org.spigotmc</groupId>
      <artifactId>spigot</artifactId>
      <version>1.19.2-R0.1-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>
  </dependencies>

  <build>
    <finalName>${project.name}-${project.version}</finalName>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>

        <version>3.2.2</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>

        <version>3.10.1</version>
        <configuration>
          <source>17</source>
          <target>17</target>
            <compilerArgs>--enable-preview</compilerArgs>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>

        <version>3.3.1-SNAPSHOT</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <createDependencyReducedPom>false</createDependencyReducedPom>
          <artifactSet>
            <includes>
              <include>${foundation.path}:Foundation*</include>
            </includes>
          </artifactSet>
          <relocations>
            <relocation>
              <pattern>org.mineacademy.fo</pattern>
              <shadedPattern>${project.groupId}.${project.artifactId}.lib</shadedPattern>
            </relocation>
          </relocations>
        </configuration>
      </plugin>
    </plugins>
    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <filtering>true</filtering>
      </resource>
    </resources>
  </build>
</project>
